--- a/content/post/2023-02-02-solar-in-seattle/index.Rmd
+++ b/content/post/2023-02-02-solar-in-seattle/index.Rmd
@@ -13,7 +13,7 @@ thumbnail: /2023/02/02/solar-in-seattle/images/bill-mead-wmaP3Tl80ww-unsplash.jp
 
 [^grain-of-salt]: This post is more "hot take" than researched evaluation of solar and green energy investments. Most of my sources are just a mash-up of things I maybe read somewhere and intuition, rather than a thorough review of literature.
 
-Anyone who lives in a residential area in Seattle has likely seen [this](https://www.youtube.com/watch?v=0StcKgAWnu4), [this](https://www.youtube.com/watch?v=MdbA_Q8AEGA), or similar ads for residential solar installations. These elide that Seattle is a comparatively bad candidate for residential solar:
+Anyone who lives in a residential area in Seattle has likely seen [this](https://www.youtube.com/watch?v=0StcKgAWnu4), [this](https://www.youtube.com/watch?v=MdbA_Q8AEGA), or similar ads for residential solar installations. These elide the problem that Seattle is a comparatively bad candidate for residential solar:
 
 * Our energy is relatively cheap.
 * It already mostly comes from renewable sources (particularly hydroelectric).
@@ -36,19 +36,19 @@ The typical American already has a disproportionate share of their wealth tied-u
 
 If Seattleites want to be a part of the growth of solar, they may be better off financing or investing in projects elsewhere. One idea might be to call your aunt in Southern California and offer to finance her panels[^payments]. Similarly, you could lease out the space on her roof and then buy and install your own panels[^leasing]. A problem with these sorts of arrangements is they get complicated when things change. What if she moves^[how do the contracts tie into the mortgage…?], the panels get damaged, someone stops paying someone, ...? These complexities are likely why solar panel financing is dominated by corporations and banks rather than peer-to-peer platforms. That rooftop leasing mostly doesn't exist in Seattle^[[Google Project Sunroof](https://sunroof.withgoogle.com/) suggests leasing out your roof is an option in Seattle but that the fees are greater than the returns.] is a tell that residential solar panel installations may not be as profitable (or at least as risk-free) as the mass of online ads make them sound[^in-cali]. 
 
-Compared to trying to establish "remote" residential solar installations, ventures in solar farms/collectives/community owned panels are perhaps easier, lower risk options for an individual investor[^residential]. Solar farms are also more efficient than residential installs. Furthermore the minimum capital from each investor may be less than the price of a residential installation[^resident], thereby providing a path to invest for those who don't own their home or are unable to afford an installation on their personal residence. 
+Compared to trying to establish "remote" residential solar installations, ventures in solar farms/collectives/community owned panels are perhaps easier, lower risk options for an individual investor[^residential]. Solar farms are also more efficient than residential installs. Furthermore the minimum capital from each investor may be less than the price of a residential installation[^resident]. This provides a path to invest for those who don't own their home or are unable to afford an installation on their personal residence. 
 
-If one solar farm is good, many may be better^[Diversification is good!]. Rather than invest a stake in a single farm you could purchase equity in solar companies or bonds for solar operations that span many projects. There are also index funds that track solar power^[e.g.SUNIDX]. The global suite of financial services and investment markets are at our fingertips, exploring these in the context of the renewable energy industry can be an outlet for the *personal energy* of a Seattle solar-phile. 
+If one solar farm is good, many may be better^[Diversification is good!]. Rather than invest a stake in a single farm you could purchase equity in solar companies or bonds for solar operations that span many projects. There are also index funds and other financial instruments that track solar power^[e.g.SUNIDX]. The global suite of financial services and investment markets are at our fingertips, exploring these in the context of the renewable energy industry can be an outlet for the *personal energy* of a Seattle solar-phile. 
 
 **Individual action**
 
-If your interest in solar is primarily wrapped-up in a goal to reduce your personal carbon footprint^[There's also the argument that you shouldn't try to offset your personal carbon footprint as much as you should just try to offset as much carbon as possible, regardless of your personal behavior.] you might instead purchase carbon offsets, donate to charities who focus on climate change, advocate to politicians to expand or open new renewable energy sources, or a myriad of other non-investment forms of engagement. When evaluating carbon conscious local home improvements you ought to take into account the comparative advantage associated with your region, home, or interests^[/How you spend your time.]. For example, heat pumps (which can replace a furnace and AC) work especially well in mild climates like Seattle's. If you have a spare bedroom or basement you might rent it out (higher density regions tend to contribute to lower per capita emissions). If your work involves driving, you might purchase an electric vehicle. I haven't run the numbers on any of these examples^[Depending on your local grid and situation it may be more effective to just purchase carbon offsets to reduce your footprint and hold-off on going electric.] but for any option you should...
+If your interest in solar is primarily wrapped-up in a goal to reduce your personal carbon footprint^[There's also the argument that you shouldn't try to offset your personal carbon footprint as much as you should just try to offset as much carbon as possible, regardless of your personal behavior.] you might instead purchase carbon offsets, donate to charities who focus on climate change, advocate to politicians to expand or open new renewable energy sources, or a myriad of other (non-investment) forms of engagement. When evaluating carbon conscious local home improvements, you ought to take into account the comparative advantage associated with your region, home, or interests^[/How you spend your time.]. For example, heat pumps (which can replace a furnace and AC) work especially well in mild climates like Seattle's. If you have a spare bedroom or basement you might rent it out (higher density regions tend to contribute to lower per capita emissions). If your work involves driving, you might purchase an electric vehicle. I haven't run the numbers on any of these examples^[Depending on your local grid and situation it may be more effective to just purchase carbon offsets to reduce your footprint and hold-off on going electric.] but for any option you should...
 
 1. take into account your specific circumstances 
+1. compare it against alternatives, including both real (e.g. physical change to a home) and financial (e.g. stocks, bonds) assets^[Both climate change and your investment portfolio are topics to be examined in a global context; it is important to consider the full range of options available to you and not get hung-up on thinking *just* in terms of your personal consumption or physical modifications you can make to your home.]
 1. evaluate it on a standard scale of financial and environmental returns on investment
-1. compare it against both tangible (e.g. physical investments in your home) and non-tangible (e.g. stocks, bonds, donations) alternatives^[Both climate change and your investment portfolio are topics to be examined in a global context; it is important to consider the full range of options available to you and not get hung-up on thinking *just* in terms of your personal consumption or physical modifications you can make to your home.]
 
-With a variety of green investment options available, it's important to maintain a shrewd perspective and choose the ones that optimize upon your targets[^action]. Investing in a cleaner future has never been easier or more important; I encourage you to take an active role in its development.
+With a variety of green investment options available, it's important to maintain a shrewd perspective and choose the ones that optimize upon your goals[^action]. Investing in a cleaner future has never been easier or more important; I encourage you to take an active role in its development.
 
 [^Anecdotal]: Touring around the city I regularly see residential solar installations. When I ask friends/family what they think about getting solar more of them say "I want to!" I didn't do a thorough review hence this statement is largely vibes based. I thought I heard installs were up ~20 percent year over year. However total installations are still a small fraction of what they are in California. What we *do* get a ton of in Seattle is ads for solar installations. 
 
